# pySpectator

./: README.md  main.py  setup.cfg  setup.py
monitopy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyspectator/: spectator.py
