[metadata]
name = monitopy
version = 0.0.3
author = Rachid Jeffali
description = "Une bibliothèque de surveillance (watchdog) simple mais puissante pour les changements dans les fichiers et répertoires, avec une prise en charge avancée de la gestion d'événements."

[options]
packages = find:
install_requires =
   watchdog

[options.packages.find]
where = monitopy